--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
         <p class="storage-used">You’ve used <strong class="storage-used-value" id="storage-used">0 GB</strong> of your storage</p>
 
-        <div role="meter"
+        <div class="meter"
+             role="meter"
              aria-valuemin="0"
              aria-labelledby="storage-used">
              <div class="fill" aria-hidden="true"></div>
